test/Fail/Polarity-pragma-for-defined-name.agda
A : Set₁
A = Set

{-# POLARITY A #-}
